Fix column issue with output display

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="js/main.js"></script>
 
     <div class="container">
-        <div id="displayOutput" class="row">
+        <div id="displayOutput" class="row col-12">
             <input type="text" id="historyValue" value="0" disabled>
             <input type="text" id="outputValue" value="0" disabled>
         </div>
