--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
 
         <div id="keyboard">
             <div class="row-fluid">
-                <button id="(" onclick="updateOutput('(')" class="btn btn-large col-2">(</button>
-                <button id=")" onclick="updateOutput(')')" class="btn btn-large col-2">)</button>
-                <button id="C" onclick="clearAll()" class="btn btn-large col-3 operator">C</button>
-                <button id="CE" onclick="backspace()" class="btn btn-large col-3 operator">CE</button>
+                <button id="C" onclick="clearAll()" class="btn btn-large col-4 operator">C</button>
+                <button id="CE" onclick="backspace()" class="btn btn-large col-4 operator">CE</button>
+            </div>
+
+            <div class="row-fluid">
+                <button id="(" onclick="updateOutput('(')" class="btn btn-large col-3">(</button>
+                <button id=")" onclick="updateOutput(')')" class="btn btn-large col-3">)</button>
+                <button id="Ans" onclick="updateAns()" class="btn btn-large col-4 operator">Ans</button>
             </div>
 
             <div class="row-fluid">
@@ -55,8 +59,8 @@
             <div class="row-fluid">
                 <button id="0" onclick="updateOutput(0)" class="btn btn-large col-2">0</button>
                 <button id="." onclick="updateOutput('.')" class="btn btn-large col-2">.</button>
-                <button id="=" onclick="equals()" class="btn btn-large col-2">=</button>
-                <button id="+" onclick="updateOutput('+')" class="btn btn-large col-4 operator">+</button>
+                <button id="=" onclick="equals()" class="btn btn-large col-3 operator">=</button>
+                <button id="+" onclick="updateOutput('+')" class="btn btn-large col-3 operator">+</button>
             </div>
         </div>
     </div>
